--- a/public/help.html
+++ b/public/help.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Help</title>
+    <title>{{pageTitle}} Partials</title>
 </head>
 <body>
+<header>
+    <nav>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/help.html">Help</a></li>
+        </ul>
+    </nav>
+</header>
 <h2>Welcome to the help page</h2>
 <p>Tell us the issues</p>
 <footer>Copyright 2024</footer>
