--- a/public/help.html
+++ b/public/help.html
@@ -11,6 +11,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
             <li><a href="/help.html">Help</a></li>
+            <li><a href="/projects">Projects</a></li>
         </ul>
     </nav>
 </header>
